@@ -42,8 +42,7 @@ AC_CHECK_LIB(krb, krb_sendauth)
 AC_CHECK_LIB(zephyr, ZGetSender,, AC_MSG_ERROR(No zephyr library found.))
 AC_CHECK_LIB(zephyr, ZInitLocationInfo, AC_DEFINE([HAVE_LIBZEPHYR_ZINITLOCATIONINFO], [], [Have ZInitLocationInfo]),)
 
-AC_CHECK_FUNCS(use_default_colors)
-
+AC_CHECK_FUNCS(use_default_colors des_string_to_key des_key_sched des_ecb_encrypt)
 
 AC_MSG_CHECKING(for des_ecb_encrypt prototype)
 AC_TRY_COMPILE([#include <des.h>
@@ -55,6 +54,7 @@ AC_MSG_RESULT($ac_cv_des_ecb_encrypt_proto)
 if test "$ac_cv_des_ecb_encrypt_proto" = yes; then
 	AC_DEFINE([HAVE_DES_ECB_ENCRYPT_PROTO], [], [have proto for des_ecb_encrypt])
 fi
+
 
 dnl Checks for header files.
 AC_HEADER_STDC
